[project]
name = "eium-doc-to-md"
version = "0.1.0"
description = "eIUM HTML documentation to GitHub Flavored Markdown converter using Pandoc with custom Lua filters"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "markitdown[pdf,docx]",
    "tqdm",
]
authors = [
    { name = "eIUM Documentation Team" }
]
keywords = ["eium", "html", "markdown", "converter", "pandoc", "documentation"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: Text Processing :: Markup :: HTML",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/palfans/eium-doc-to-md"
Repository = "https://github.com/palfans/eium-doc-to-md"
Issues = "https://github.com/palfans/eium-doc-to-md/issues"

[project.scripts]
html-to-md = "src.convert_manuals:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]

[tool.ruff.format]
quote-style = "single"
indent-style = "space"
